# hyperlog

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
benchmark/: bench.cpp
scripts/: bench.sh
src/: main.cpp
src/core/: constants.hpp  version.hpp
src/engine/cache/: rid_cache.cpp  rid_cache.hpp
src/engine/wal/: ring_buffer.hpp  segment_writer.cpp  segment_writer.hpp  wal.cpp  wal.hpp
src/engine/wal/record/: record_footer.hpp  record_header.hpp  record_types.hpp  record_utils.hpp
src/net/routes/: append.cpp  append.hpp
src/util/: crc32c.cpp  crc32c.hpp  hash.hpp  id_gen.hpp  mempool.hpp
